# irontrade

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: simulated_client.rs
src/: api.rs  clients.rs  factory.rs  lib.rs  live_market.rs  market.rs  provider.rs  providers.rs  simulated.rs  util.rs
src/api/: client.rs  common.rs  environment.rs  market.rs  provider.rs  request.rs  response.rs
src/clients/: alpaca.rs  alpaca_converters.rs  simulated.rs
src/clients/simulated/: broker.rs
src/providers/: alpaca.rs  alpaca_converters.rs  simul.rs  simulated.rs
src/providers/simul/: broker.rs
src/providers/simulated/: broker.rs
src/simulated/: broker.rs  client.rs  context.rs  data.rs  environment.rs  time.rs
src/util/: alpaca.rs
src/util/alpaca/: client.rs  convert.rs
src/util/simulated/: broker.rs  client.rs
