[package]
name = "irontrade"
version = "0.7.0-alpha02"
edition = "2024"
license = "GPL-3.0-or-later"
description = """
Library crate with a trading interface and simulated environment
"""
repository = "https://github.com/junioraw/irontrade"

[dependencies]
anyhow = "1.0.100"
bigdecimal = "0.4"
chrono = "0.4.42"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }