[package]
name = "irontrade"
version = "0.7.0-alpha05"
edition = "2024"
license = "GPL-3.0-or-later"
description = """
Library crate with a trading interface and simulated environment
"""
repository = "https://github.com/junioraw/irontrade"

[dependencies]
anyhow = "1.0.100"
bigdecimal = "0.4"
chrono = "0.4.42"
dyn-clone = "1.0.20"
reqwest = {  version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-this-or-that = "0.5.0"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }