[package]
authors = ["Agostinho Junior <junioraaw7@gmail.com>"]
name = "irontrade"
version = "0.7.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = """
Library crate with a trading interface and simulated environment
"""
repository = "https://github.com/junioraw/irontrade"

[features]
live_market = ["dep:reqwest", "dep:serde", "dep:serde-this-or-that"]
default = ["live_market"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bigdecimal = "0.4"
chrono = "0.4.42"
dyn-clone = "1.0.20"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }

# live market dependencies
reqwest = {  version = "0.12.28", features = ["json"], optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde-this-or-that = { version = "0.5.0", optional = true }